[package]
name = "roblox-ui"
version = "0.2.0"
edition = "2021"
description = "A frontend for Roblox projects"
keywords = ["cli", "async"]
categories = ["asynchronous"]
repository = "https://github.com/filiptibell/roblox-ui"
license = "MPL-2.0"
publish = false

[[bin]]
name = "roblox-ui"
path = "src/main.rs"

[profile.release]
opt-level = "z"
strip = true
lto = true

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bytes = "1.0"
const_format = "0.2"
dashmap = "5.5"
once_cell = "1.18"
semver = "1.0"
thiserror = "1.0"
url = "2.4"
usvg = "0.36"

serde = "1.0"
serde_with = "3.4"
serde_json = "1.0"
toml = "0.8"

futures = "0.3"
tokio = { version = "1.25", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

rbx_reflection = "4.4"
rbx_reflection_database = "0.2.9"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["rustls-tls", "gzip"]

[dependencies.clap]
version = "4.4"
features = ["derive", "env"]

[dependencies.zip]
version = "0.6"
default-features = false
features = ["deflate", "bzip2", "zstd"]
